# app/server.js
@@ -1,4 +1,6 @@
 const express = require("express");
+const https = require("https");
+const fs = require("fs");
 const app = express();
 
 const correlator = require('express-correlation-id')
@@ -10,6 +12,9 @@ const routes = require("./routes/routes")
 const {logger} = require("./utility/middleware/middleware")
 const utils = require("@jshwilliams/node-utils")
 const chalk = require("chalk")
+require("dotenv").config()
+
+const DELTADB_HOST = process.env.DELTADB_HOST
 
 const port = process.env.PORT || 5000
 
@@ -28,6 +33,9 @@ app.route("/").get(function (req,res) {
 
 app.use("/api", routes)
 
-app.listen(port, async () => {
+https.createServer({
+    key: fs.readFileSync(`/etc/letsencrypt/live/${DELTADB_HOST}/privkey.pem`),
+    cert: fs.readFileSync(`/etc/letsencrypt/live/${DELTADB_HOST}/fullchain.pem`)
+}, app).listen(port, async () => {
     utils.log.info(`${chalk.cyan("port")}=${port} ${chalk.cyan("message")}=NFL DB API Started`)
 })
